added simple doc structure

--- a/documentation/thesis/main.tex
+++ b/documentation/thesis/main.tex
@@ -1,5 +1,97 @@
-%!TEX root = main.tex
+﻿%!TEX root = main.tex
+
 \documentclass{article} 
-\begin{document} Hello world! 
+
+\setcounter{tocdepth}{5} %shows all levels incl. paragraph
+
+\title{Title of my document}
+\date{2016-02-06}
+\author{Alexander af Trolle}
+
+
+\begin{document}
+
+%% title page Will be removed in final
+\maketitle
+
+
+\newpage
+ 
+ %%abstract english (main)
+
+\section{Abstract}
+Write an abstract. Introduce the subject area for the project and describe the problems that are solved and described in the thesis. Present how the problems have been solved, methods used and present results for the project. 
+
+The presentation of the results should be the main part of the abstract. Use about ½ A4-page.
+
+\section{Keywords}
+Oculus, Samsung,  Gear VR, and Microsoft Kinect
+
+\newpage
+
+
+%% Abstract Svenska
+
+\section{Abstract}
+Svensk version av abstract – samma titel på svenska som på engelska.
+
+
+\section{Nyckelord}
+
+
+\newpage
+
+%% Table of content 
+\tableofcontents
+\newpage
+
+
+%% Introduction
+\section{Introduction}
+\subsection{Background}
+\subsection{Problem}
+\subsection{Purpose}
+\subsection{Goal}
+\subsubsection{Benefits, Ethics and Sustainability}
+\subsection{Methodology / Methods}
+\subsection{Delimitations (Avgränsningar, swe)}
+\subsection{Outline (Disposition)}
+
+\newpage
+
+%% Theoretic background
+\section{(Theoretic Background) Use a self-explaining title}
+\subsection{Use headings to break the text}
+
+\newpage
+
+%% Engineering-related content, Methodologies and Methods
+\section{(Engineering-related content, Methodologies and Methods) Use a self-explaining title}
+\subsection{Engineering-related and scientific content}
+
+\newpage
+
+%% main work 
+\section{ (The work) Use a self-explaining title}
+
+\newpage
+
+ %% results of work
+\section{ (Result) Use a self-explaining title}
+
+\newpage
+
+
+%% References 
+\section{References}
+\newpage
+
+%%appendix A
+\section{Appendix A}
+\newpage
+
+%% appendix b
+\section{Appendix B}
+\newpage
 
 \end{document}
